# bit

./: .editorconfig  .env.example  .gitignore  .gitmodules  README.md  pyproject.toml  wgd_environment.yml
.github/workflows/: build_and_test.yml  python-lint.yml  scss-lint.yml  setup-uv-monorepo.yml  style_lint.yml  test.yml
activate/: pyvenv.cfg
activate/Scripts/: activate  activate.bat
bit/: WgdManager.py  app.py  dirpaths.py  forms.py  tools.py  views.py  wgd_manager.py
bit/static/: .stylelintrc  package-lock.json
bit/static/css/: main.css
bit/static/scss/: main.scss
bit/static/scss/abstracts/: _colours.scss  _typography.scss
bit/static/scss/base/: _layout.scss
bit/static/scss/components/: _footer.scss  _header.scss  _headings.scss  _navbar.scss
bit/static/scss/templates/: _home.scss  _tools.scss
bit/static/wgd_files/outdir/: egu1000.fasta.tsv  egu1000.fasta.tsv.ks.tsv
bit/static/wgd_files/uploads/: egu1000.fasta
bit/templates/: about.html  background_reading.html  index.html  layout.html
bit/templates/_components/: footer.html
bit/templates/_macros/: _form_helpers.html
bit/templates/errors/: file_too_large.html  invalid_file.html
bit/templates/tools/: dmd.html  dmd_results.html  index.html  ksd.html  ksd_results.html  select_previous_visualisations.html  select_tool.html  tools_FILE_TOO_LARGE.html  tools_GET.html  tools_INVALID.html  tools_POST.html  tools_RESULTS.html  viz.html  viz_results.html
templates/Scripts/: activate.bat
tests/: conftest.py  test_other_pages.py  test_tools_page.py  test_wgd.py
tests/test_files/file_upload/valid/: test.fasta
tools/wgd_manager/: README.md  pyproject.toml
website/: .gitignore  README.md  pyproject.toml  settings.toml
website/app/templates/: nav_bar.html  nav_bar_test1.html  nav_bar_test2.html
website/bit/: WgdManager.py  app.py  dirpaths.py  tools.py  views.py  wgd_manager.py
website/bit/static/: package-lock.json  package.json
website/bit/templates/: about.html  background_reading.html  index.html  layout.html
website/templates/: pyvenv.cfg
website/templates/Scripts/: activate
website/tests/: conftest.py  test_other_pages.py  test_tools.py  test_tools_page.py  test_wgd.py
(+441 files in other folders)
